--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,7 @@
 {
-  
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,9 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "jsonwebtoken": "^8.5.1",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.0"
   }
 }
